Till ActionSheet Controller Added

--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -1,10 +1,20 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="m1"></ion-menu-button>
+      <!-- above or below both works -->
+      <!-- <ion-button (click)="onOpenMenu()">Menu</ion-button> -->
+    </ion-buttons>
+
     <ion-title>Discover Places</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content class="ion-padding">
+  <ion-segment value="all" (ionChange)="onFilterUpdate($event)">
+    <ion-segment-button value="all">All Places</ion-segment-button>
+    <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
+  </ion-segment>
   <ion-grid>
     <ion-row>
       <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
@@ -15,7 +25,9 @@
           </ion-card-header>
           <ion-img [src]="loadedPlaces[0].imageUrl"></ion-img>
           <ion-card-content>
-            <p>{{loadedPlaces[0].description}}</p>
+            <!-- <p>{{loadedPlaces[0].description}}</p> -->
+            <!-- <p><ion-label color="secondary">{{loadedPlaces[0].description}}</ion-label></p> -->
+            <p><ion-text color="secondary">{{loadedPlaces[0].description}}</ion-text></p>
           </ion-card-content>
           <div>
             <ion-button routerDirection="forward" [routerLink]="['/','places','tabs','discover',loadedPlaces[0].id]" fill="clear" color="primary">
@@ -43,7 +55,26 @@
             </ion-label>
           </ion-item>
         </ion-list>
+
+        <!-- virtual scroll implementation may or may not be having bugs -->
+        <!-- <ion-virtual-scroll [items]="listedLoadedPlaces" approxItemHeight="86px">
+          <ion-item *virtualItem="let place"
+                    [routerLink]="['/','places','tabs','discover',place.id]"
+                    detail
+          >
+            <ion-thumbnail slot="start">
+              <ion-img [src]="place.imageUrl"></ion-img>
+            </ion-thumbnail>
+            <ion-label>
+              <h2>{{place.title}}</h2>
+              <p>{{place.description}}</p>
+              <h3>{{place.price | currency}} Per Night</h3>
+            </ion-label>
+          </ion-item>
+        </ion-virtual-scroll> -->
+
       </ion-col>
+
     </ion-row>
   </ion-grid>
 </ion-content>
