--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -7,3 +7,74 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <!-- <ion-grid class="ion-no-padding"> -->
+  <!-- <ion-grid fixed>   -->
+  <ion-grid>
+    <!-- <ion-row>
+      <ion-col>Row1Col1</ion-col>
+      <ion-col>Row1Col2</ion-col>
+      <ion-col>Row1Col3</ion-col>
+      <ion-col>Row1Col4</ion-col>
+      <ion-col>Row1Col5</ion-col>
+      <ion-col>Row1Col6</ion-col>
+      <ion-col>Row1Col7</ion-col>
+      <ion-col>Row1Col8</ion-col>
+      <ion-col>Row1Col9</ion-col>
+      <ion-col>Row1Col10</ion-col>
+      <ion-col>Row1Col11</ion-col>
+      <ion-col>Row1Col12</ion-col>
+    </ion-row> -->
+
+    <!-- <ion-row>
+      <ion-col size="10">Row1Col1</ion-col>
+      <ion-col size="1">Row1Col2</ion-col>
+    </ion-row> -->
+
+    <!-- <ion-row>
+      <ion-col size="4">Row1Col1</ion-col>
+      <ion-col size="4">Row1Col2</ion-col>
+    </ion-row> -->
+
+    <!-- <ion-row>
+      <ion-col size="4" offset="2">Row1Col1</ion-col>
+      <ion-col size="4">Row1Col2</ion-col>
+    </ion-row> -->
+
+    <!-- <ion-row style="height: 200px;">
+      <ion-col size="4" offset="2">Row1Col1</ion-col>
+      <ion-col size="4">Row1Col2</ion-col>
+    </ion-row> -->
+
+    <!-- <ion-row> -->
+    <!-- Above is the default same as below -->
+    <!-- <ion-row class="ion-align-items-stretch">   -->
+    <!-- <ion-row class="ion-align-items-start">     -->
+    <!-- <ion-row class="ion-align-items-end">     -->
+    <!-- <ion-row class="ion-align-items-center">    
+      <ion-col size="4" offset="2">Row1Col1</ion-col>
+      <ion-col size="4"><ion-card><ion-card-content><h1>Some Title</h1><p>Some paragraph</p></ion-card-content></ion-card></ion-col>
+    </ion-row> -->
+
+    <!-- <ion-row class="ion-align-items-center">     -->
+    <!-- above is default same as below -->
+    <!-- <ion-row class="ion-align-items-center ion-justify-content-start"> -->
+    <!-- <ion-row class="ion-align-items-center ion-justify-content-end">    -->
+    <!-- <ion-row class="ion-align-items-center ion-justify-content-center">     
+      <ion-col size="4">Row1Col1</ion-col>
+      <ion-col size="4"><ion-card><ion-card-content><h1>Some Title</h1><p>Some paragraph</p></ion-card-content></ion-card></ion-col>
+    </ion-row> -->
+
+    <ion-row class="ion-align-items-center ion-justify-content-center">     
+      <ion-col size="4">Row1Col1</ion-col>
+      <ion-col size="4"><ion-card><ion-card-content><h1>Some Title</h1><p>Some paragraph</p></ion-card-content></ion-card></ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col>Row2Col1</ion-col>
+      <ion-col>Row2Col2</ion-col>
+    </ion-row>
+
+  </ion-grid>
+</ion-content>
+
