--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,9 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>auth</ion-title>
+    <ion-title>Authenticate</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-   <div>Auth Page</div>
+<ion-content padding>
+   <ion-item>
+     <ion-label position="floating">E-Mail</ion-label>
+     <ion-input></ion-input>
+   </ion-item>
+   <ion-button color="primary" (click)="onLogin()">
+      Login
+   </ion-button>
+   <!-- <div class="ion-text-center">
+    <ion-spinner color="primary" *ngIf="isLoading"></ion-spinner>
+   </div>
+   <ion-button color="primary" (click)="onLogin()" *ngIf="!isLoading">
+    Login
+   </ion-button> -->
 </ion-content>
