--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -1,5 +1,9 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="m1"></ion-menu-button>
+    </ion-buttons>
+
     <ion-title>My Offers</ion-title>
 
     <!-- <ion-buttons slot="start">
@@ -15,23 +19,31 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-grid>
+  <ion-grid >
     <ion-row>
       <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
         <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces" 
-                    [routerLink]="['/','places','tabs','offers',place.id]"    
-                    detail
-          >       
-            <ion-thumbnail slot="start">
-              <ion-img [src]="place.imageUrl"></ion-img>
-            </ion-thumbnail>
-            <ion-label>
-              <h2>{{place.title}}</h2>
-              <p>{{place.description}}</p>
-              <h3>{{place.price | currency}} Per Night</h3>
-            </ion-label>
-          </ion-item>
+          <ion-item-sliding *ngFor="let place of loadedPlaces" #slidingItem>
+            <ion-item [routerLink]="['/','places','tabs','offers',place.id]"    
+                      detail
+            >       
+              <ion-thumbnail slot="start">
+                <ion-img [src]="place.imageUrl"></ion-img>
+              </ion-thumbnail>
+              <ion-label>
+                <h2>{{place.title}}</h2>
+                <p>{{place.description}}</p>
+                <h3>{{place.price | currency}} Per Night</h3>
+              </ion-label>
+            </ion-item>
+            <ion-item-options>
+              <!-- <ion-item-option color="secondary" [routerLink]="['/','places','tabs','offers','edit',place.id]"> -->
+              <ion-item-option color="secondary" (click)="onEdit(place.id,slidingItem)">
+                <ion-icon name="create" slot="top"></ion-icon>
+                Edit
+              </ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
         </ion-list>
       </ion-col>
     </ion-row>
