--- a/src/app/bookings/create-booking/create-booking.component.html
+++ b/src/app/bookings/create-booking/create-booking.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Book {{selectedPlace.title}} now!</ion-title>
+    <ion-title>Book {{ selectedPlace.title }} now!</ion-title>
     <ion-buttons slot="primary">
       <ion-button (click)="onCancel()">
         <ion-icon name="close"></ion-icon>
@@ -10,6 +10,83 @@
 </ion-header>
 
 <ion-content text-center padding>
-  <p>{{selectedPlace.description}}</p>
-  <ion-button color="primary" (click)="onBookPlace()">Book Now!</ion-button>
+  <form (ngSubmit)="onBookPlace()" #f="ngForm">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">First Name</ion-label>
+            <ion-input
+              type="text"
+              ngModel
+              name="firstName"
+              required
+            ></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Last Name</ion-label>
+            <ion-input type="text" ngModel name="lastName" required></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Number of Guests</ion-label>
+            <ion-select [ngModel]="'2'" name="guestNumber">
+              <ion-select-option value="1">1</ion-select-option>
+              <ion-select-option value="2">2</ion-select-option>
+              <ion-select-option value="3">3</ion-select-option>
+            </ion-select>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="3" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Date From</ion-label>
+            <ion-datetime 
+              display-format="MMM DD YYYY"
+              picker-format="YYYY MMM DD"
+              [min]="selectedPlace.availableFrom.toISOString()"
+              [max]="selectedPlace.availableTo.toISOString()"
+              [ngModel]="startDate"
+              name="dateFrom"
+              required
+              #startDateCtrl="ngModel"
+            >
+            </ion-datetime>
+          </ion-item>
+        </ion-col>
+     
+        <ion-col size-sm="3">
+          <ion-item>
+            <ion-label position="floating">Date To</ion-label>
+            <ion-datetime 
+              display-format="MMM DD YYYY"
+              picker-format="YY MMM DD"
+              [min]="startDateCtrl.value"
+              [max]="selectedPlace.availableTo.toISOString()"
+              [ngModel]="endDate"
+              name="dateTo"
+              required
+            >
+            </ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="3" offset-sm="3">
+          <!-- <ion-button color="primary" (click)="onBookPlace()" expand="block">Book Now!</ion-button> -->
+          <ion-button type="submit" color="primary" expand="block" [disabled]="!f.valid || !datesValid()">Book Now!</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+  
+  
 </ion-content>
