--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,80 +1,95 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>New Offer</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
+    </ion-buttons>
+    <ion-title>New Offer</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <!-- <ion-grid class="ion-no-padding"> -->
-  <!-- <ion-grid fixed>   -->
-  <ion-grid>
-    <!-- <ion-row>
-      <ion-col>Row1Col1</ion-col>
-      <ion-col>Row1Col2</ion-col>
-      <ion-col>Row1Col3</ion-col>
-      <ion-col>Row1Col4</ion-col>
-      <ion-col>Row1Col5</ion-col>
-      <ion-col>Row1Col6</ion-col>
-      <ion-col>Row1Col7</ion-col>
-      <ion-col>Row1Col8</ion-col>
-      <ion-col>Row1Col9</ion-col>
-      <ion-col>Row1Col10</ion-col>
-      <ion-col>Row1Col11</ion-col>
-      <ion-col>Row1Col12</ion-col>
-    </ion-row> -->
-
-    <!-- <ion-row>
-      <ion-col size="10">Row1Col1</ion-col>
-      <ion-col size="1">Row1Col2</ion-col>
-    </ion-row> -->
-
-    <!-- <ion-row>
-      <ion-col size="4">Row1Col1</ion-col>
-      <ion-col size="4">Row1Col2</ion-col>
-    </ion-row> -->
-
-    <!-- <ion-row>
-      <ion-col size="4" offset="2">Row1Col1</ion-col>
-      <ion-col size="4">Row1Col2</ion-col>
-    </ion-row> -->
-
-    <!-- <ion-row style="height: 200px;">
-      <ion-col size="4" offset="2">Row1Col1</ion-col>
-      <ion-col size="4">Row1Col2</ion-col>
-    </ion-row> -->
-
-    <!-- <ion-row> -->
-    <!-- Above is the default same as below -->
-    <!-- <ion-row class="ion-align-items-stretch">   -->
-    <!-- <ion-row class="ion-align-items-start">     -->
-    <!-- <ion-row class="ion-align-items-end">     -->
-    <!-- <ion-row class="ion-align-items-center">    
-      <ion-col size="4" offset="2">Row1Col1</ion-col>
-      <ion-col size="4"><ion-card><ion-card-content><h1>Some Title</h1><p>Some paragraph</p></ion-card-content></ion-card></ion-col>
-    </ion-row> -->
-
-    <!-- <ion-row class="ion-align-items-center">     -->
-    <!-- above is default same as below -->
-    <!-- <ion-row class="ion-align-items-center ion-justify-content-start"> -->
-    <!-- <ion-row class="ion-align-items-center ion-justify-content-end">    -->
-    <!-- <ion-row class="ion-align-items-center ion-justify-content-center">     
-      <ion-col size="4">Row1Col1</ion-col>
-      <ion-col size="4"><ion-card><ion-card-content><h1>Some Title</h1><p>Some paragraph</p></ion-card-content></ion-card></ion-col>
-    </ion-row> -->
-
-    <ion-row class="ion-align-items-center ion-justify-content-center">     
-      <ion-col size="4">Row1Col1</ion-col>
-      <ion-col size="4"><ion-card><ion-card-content><h1>Some Title</h1><p>Some paragraph</p></ion-card-content></ion-card></ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col>Row2Col1</ion-col>
-      <ion-col>Row2Col2</ion-col>
-    </ion-row>
-
-  </ion-grid>
+  <form [formGroup]="form">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Title</ion-label>
+            <ion-input type="text" autocomplete autocorrect formControlName="title"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!form.get('title').valid && form.get('title').touched">
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item lines="none"> 
+            <p>Title is needed</p>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Short Description</ion-label>
+            <ion-textarea rows="3" formControlName="description"></ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item lines="none"> 
+            <p>Description must be atleast 1 character long and must not be more than 180 characters long</p>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Price</ion-label>
+            <ion-input type="number" formControlName="price"></ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!form.get('price').valid && form.get('price').touched">
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item lines="none"> 
+            <p>Price is needed and must be greater than zero</p>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="3" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Available From</ion-label>
+            <ion-datetime min="2021-03-01" max="2021-12-31" formControlName="dateFrom"></ion-datetime>
+          </ion-item>
+        </ion-col>
+        <ion-col size-sm="3">
+          <ion-item>
+            <ion-label position="floating">Available To</ion-label>
+            <ion-datetime min="2021-03-02" max="2021-12-31" formControlName="dateTo"></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!form.get('dateFrom').valid && form.get('dateFrom').touched">
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item lines="none"> 
+            <p>'Date From' needs to be selected</p>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row *ngIf="!form.get('dateTo').valid && form.get('dateTo').touched">
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item lines="none"> 
+            <p>'Date To' needs to be selected</p>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+  
+  
 </ion-content>
-
