--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -24,7 +24,8 @@
       <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
         <ion-list>
           <ion-item-sliding *ngFor="let place of loadedPlaces" #slidingItem>
-            <ion-item [routerLink]="['/','places','tabs','offers',place.id]"    
+            <app-offer-item [offer]="place"></app-offer-item>
+            <!-- <ion-item [routerLink]="['/','places','tabs','offers',place.id]"    
                       detail
             >       
               <ion-thumbnail slot="start">
@@ -35,7 +36,7 @@
                 <p>{{place.description}}</p>
                 <h3>{{place.price | currency}} Per Night</h3>
               </ion-label>
-            </ion-item>
+            </ion-item> -->
             <ion-item-options>
               <!-- <ion-item-option color="secondary" [routerLink]="['/','places','tabs','offers','edit',place.id]"> -->
               <ion-item-option color="secondary" (click)="onEdit(place.id,slidingItem)">
