--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,7 +4,8 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  // --ion-color-primary: #3880ff;
+  --ion-color-primary: #f16868;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
@@ -74,13 +75,21 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-toolbar-background: var(--ion-color-primary);
+  --ion-toolbar-color: var(--ion-color-primary-contrast);
+}
+
+ion-button{
+  --background: green;
+  --box-shadow: 2px 2px 2px rgba(0,0,0,0.6);
 }
 
 @media (prefers-color-scheme: dark) {
   /*
    * Dark Colors
    * -------------------------------------------
-   */
+  */
 
   body {
     --ion-color-primary: #428cff;
@@ -229,4 +238,5 @@
 
     --ion-card-background: #1e1e1e;
   }
+
 }
