--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -3,21 +3,35 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
     </ion-buttons>
-    <ion-title>Place Detail titled {{place.title}} with id:{{place.id}}</ion-title>
+    <ion-title>
+      <p>{{place.title}}</p>
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
+  <ion-grid class="ion-no-padding">
     <ion-row>
-      <ion-col>{{place.description}}</ion-col>
+      <ion-col size-sm="6" offset-sm="3" class="ion-padding" class="ion-text-center">
+        <p>{{place.description}}</p>
+      </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col><ion-img [src]="place.imageUrl"></ion-img></ion-col>
+      <ion-col size-sm="6" offset-sm="3">
+        <ion-img [src]="place.imageUrl"></ion-img>
+      </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col>{{place.price | currency}} Per Night</ion-col>
+      <ion-col size-sm="6" offset-sm="3" class="ion-padding" class="ion-text-center">
+        <p>{{place.price | currency}} Per Night</p>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="isBookable">
+      <ion-col size-sm="6" offset-sm="3" class="ion-text-center">
+        <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book</ion-button>
+      </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-button color="primary" class="ion-margin" (click)="onBookPlace()">Book</ion-button>
+    
+ 
 </ion-content>
