--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -10,7 +10,20 @@
 <ion-content class="ion-padding">
   <ion-grid>
     <ion-row>
-      <ion-col size-md="6" offset-md="3">
+      <ion-col
+        size-md="6"
+        offset-md="3"
+        class="ion-text-center"
+        *ngIf="!loadedBookings || loadedBookings.length<=0"
+      >
+        <p>No Bookings found!</p>
+      </ion-col>
+
+      <ion-col
+        size-md="6"
+        offset-md="3"
+        *ngIf="loadedBookings && loadedBookings.length>0"
+      >
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingItem>
             <ion-item>
@@ -20,7 +33,10 @@
               </ion-label>
             </ion-item>
             <ion-item-options>
-              <ion-item-option color="danger" (click)="onCancelBooking(booking.id,slidingItem)">
+              <ion-item-option
+                color="danger"
+                (click)="onCancelBooking(booking.id,slidingItem)"
+              >
                 <ion-icon name="trash" slot="icon-only"></ion-icon>
               </ion-item-option>
             </ion-item-options>
