--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -23,7 +23,7 @@
     <ion-row>
       <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
         <ion-list>
-          <ion-item-sliding *ngFor="let place of loadedPlaces" #slidingItem>
+          <ion-item-sliding *ngFor="let place of offers" #slidingItem>
             <app-offer-item [offer]="place"></app-offer-item>
             <!-- <ion-item [routerLink]="['/','places','tabs','offers',place.id]"    
                       detail
