--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -9,12 +9,18 @@
 
 <ion-content class="ion-padding">
   <ion-grid>
+    <ion-row *ngIf="isLoading">
+      <ion-col size-md="6" offset-md="3" class="ion-text-center">
+        <ion-spinner color="primary"></ion-spinner>
+      </ion-col>
+    </ion-row>
+
     <ion-row>
       <ion-col
         size-md="6"
         offset-md="3"
         class="ion-text-center"
-        *ngIf="!loadedBookings || loadedBookings.length<=0"
+        *ngIf="!isLoading && (!loadedBookings || loadedBookings.length<=0)"
       >
         <p>No Bookings found!</p>
       </ion-col>
@@ -22,11 +28,14 @@
       <ion-col
         size-md="6"
         offset-md="3"
-        *ngIf="loadedBookings && loadedBookings.length>0"
+        *ngIf="!isLoading && (loadedBookings && loadedBookings.length>0)"
       >
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingItem>
             <ion-item>
+              <ion-avatar slot="start">
+                <ion-img [src]="booking.placeImage"></ion-img>
+              </ion-avatar>
               <ion-label>
                 <h5>{{booking.placeTitle}}</h5>
                 <p>Number of guests: {{booking.guestNumber}}</p>
