--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -17,14 +17,23 @@
     <ion-segment-button value="all">All Places</ion-segment-button>
     <ion-segment-button value="bookable">Bookable Places</ion-segment-button>
   </ion-segment>
-  <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length<=0">
+  <ion-grid *ngIf="isLoading">
+    <ion-row>
+      <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
+        <div class="ion-text-center">
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid *ngIf="!isLoading && (!relevantPlaces || relevantPlaces.length<=0)">
     <ion-row>
       <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
         <p>There are no bookable places right now. Please come back later.</p>
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="relevantPlaces.length>0">
+  <ion-grid *ngIf="!isLoading && relevantPlaces.length>0">
     <ion-row>
       <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
         <ion-card>
