--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -4,13 +4,16 @@
       <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
     </ion-buttons>
     <ion-title>
-      <p>{{place.title}}</p>
+      <p>{{isLoading?'Loading...':place.title}}</p>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid class="ion-no-padding">
+  <div *ngIf="isLoading" class="ion-text-center">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <ion-grid class="ion-no-padding" *ngIf="!isLoading">
     <ion-row>
       <ion-col size-sm="6" offset-sm="3" class="ion-padding" class="ion-text-center">
         <p>{{place.description}}</p>
