--- a/src/app/places/offers/offers.page.html
+++ b/src/app/places/offers/offers.page.html
@@ -22,9 +22,16 @@
   <ion-grid >
     <ion-row>
       <ion-col class="ion-text-center" size="12" size-sm="8" offset-sm="2">
-        <ion-list>
-          <ion-item-sliding *ngFor="let place of offers" #slidingItem>
-            <app-offer-item [offer]="place"></app-offer-item>
+        <div *ngIf="isLoading" class="ion-text-center">
+          <ion-spinner  color="primary"></ion-spinner>
+        </div>
+        <div *ngIf="!isLoading && offers.length<=0" class="ion-text-center">
+          <p>No Offers found! Please create one first.</p>
+          <ion-button color="primary" routerLink="/places/tabs/offers/new">Offer New Place</ion-button>
+        </div>
+        <ion-list *ngIf="!isLoading && offers.length>0">
+          <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
+            <app-offer-item [offer]="offer"></app-offer-item>
             <!-- <ion-item [routerLink]="['/','places','tabs','offers',place.id]"    
                       detail
             >       
@@ -39,7 +46,7 @@
             </ion-item> -->
             <ion-item-options>
               <!-- <ion-item-option color="secondary" [routerLink]="['/','places','tabs','offers','edit',place.id]"> -->
-              <ion-item-option color="secondary" (click)="onEdit(place.id,slidingItem)">
+              <ion-item-option color="secondary" (click)="onEdit(offer.id,slidingItem)">
                 <ion-icon name="create" slot="top"></ion-icon>
                 Edit
               </ion-item-option>
